--- a/02-11-2021/index.html
+++ b/02-11-2021/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Array e Oggetti</title>
 </head>
 <body>
-  
+  <h1>Che guardi qui? vai a vedere la console del browser!</h1>
+
   <script src="array.js"></script>
   <script src="objects.js"></script>
 </body>
