css pagina migliorato ma ancora i movimenti sprite non vanno bene

--- a/18-11-2021/esercizio svolto/index.html
+++ b/18-11-2021/esercizio svolto/index.html
@@ -12,9 +12,12 @@
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
-
+<header>
+    <h1>Edgemony Bootcamp - 2021 - Game</h1>
+</header>
 <body>
-    <div id="sfondo">
+    <div id="container">
+        <div id="sfondo"></div>
         <div class="girl" >
 
         </div>
