--- a/18-11-2021/esercizio svolto/index.html
+++ b/18-11-2021/esercizio svolto/index.html
@@ -8,34 +8,39 @@
     <title>Game</title>
     <!-- <link rel="stylesheet" href="./normalize.css" /> -->
 
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
 <header>
-    <h1>Edgemony Bootcamp - 2021 - Game</h1>
+    <h1>Edgemony Bootcamp - 2021 - Sprite Animation</h1>
 </header>
+
 <body>
+
     <div id="container">
         <div id="sfondo"></div>
-        <div class="girl" >
+        <div class="girl animate__animated">
 
         </div>
     </div>
 
     <div class="Btn">
-        <div class="w">W</div>
-        <div class="a">A</div>
-        <div class="s">S</div>
-        <div class="d">D</div>
-      </div>
+        <div class="w ">Up</div>
+        <div class="a">Sx</div>
+        <div class="s">Down</div>
+        <div class="d">Dx</div>
+    </div>
 
-    <!-- animate__slideOutDown
-    animate__slideOutDown
-    animate__slideOutRight
-    animate__slideOutUp -->
-<script src="js/index.js"></script>
+
+
+    <script src="js/index.js"></script>
 
 </body>
+
+<footer>
+    <hr>
+    <p>Copyright 2021 - powered by Floriana Domianello</p>
+</footer>
 
 </html>
