--- a/18-11-2021/esercizio svolto/index.html
+++ b/18-11-2021/esercizio svolto/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <header>
-    <h1>Edgemony Bootcamp - 2021 - Sprite Animation</h1>
+    <h1>Edgemony Bootcamp - 2021 - Game</h1>
 </header>
 
 <body>
@@ -27,6 +27,7 @@
 
     <div class="Btn">
         <div class="w ">Up</div>
+        <div class="j">Jump</div>
         <div class="a">Sx</div>
         <div class="s">Down</div>
         <div class="d">Dx</div>
